# failover-menuconnector

./: README.md
failover-menu-lib/: .failovermenu  Cargo.toml  iikocloud-api-1.0.0.json
failover-menu-lib/oldsrc/: main2.rs
failover-menu-lib/src/: client.rs  credentials.rs  main.rs  organizations.rs
