[package]
name = "failover-menu-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
async-std = { version = "1.13.0", features = ["unstable"]}
tokio = { version = "1.40.0", features = ["full"] }
home = "0.5.9"
anyhow = "1.0.93"
log = "0.4.22"
env_logger = "0.11.5"